# clipbrain

./: .gitignore  LICENSE  README.md  README_ZH.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  macos_panel.rs  main.rs
src-tauri/src/actions/: mod.rs  registry.rs  traits.rs
src-tauri/src/actions/builtin/: format_json.rs  format_yaml.rs  llm_actions.rs  llm_actions_v2.rs  mask_sensitive.rs  math_calc.rs  mod.rs  table_convert.rs  url_preview.rs  vision_actions.rs
src-tauri/src/actions/plugin/: loader.rs  mod.rs  plugin_action.rs  schema.rs  store.rs
src-tauri/src/classifier/: mod.rs  patterns.rs  rules.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs
src-tauri/src/commands/: action_cmds.rs  clipboard_cmds.rs  config_cmds.rs  history_cmds.rs  mod.rs  model_cmds.rs  model_mgmt_cmds.rs  plugin_cmds.rs  stats_cmds.rs  tag_cmds.rs
src-tauri/src/config/: manager.rs  mod.rs  privacy.rs  schema.rs
src-tauri/src/model/: backend.rs  mod.rs  model_manager.rs  router.rs  state.rs
src-tauri/src/model/local/: llama_server.rs  mlx_sidecar.rs  mod.rs
src-tauri/src/model/remote/: mod.rs  openai_compat.rs
src-tauri/src/storage/: action_history.rs  clipboard_history.rs  clipboard_tags.rs  custom_prompts.rs  database.rs  migrations.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/components/: ClipboardPanel.tsx  DateRangePicker.tsx  (+9 more)
(+8 files in other folders)
