[package]
name = "clipbrain"
version = "0.1.0"
description = "ClipBrain - 本地 AI 剪贴板助手"
authors = ["rhh777"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rhh777/clipbrain"

[lib]
name = "clipbrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
regex = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
meval = "0.2"
thiserror = "2"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.25"
macos-accessibility-client = "0.0.2"
